# zephyr-website

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  LICENSE  README.md  RSPRESS_SSG_MIGRATION_PLAN.md  biome.json  chrome-lighthouse-result.json  eventsUpdates.md  image.d.ts  index.html  modern.config.ts  netlify.toml  package.json  partners.md  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.md  rsbuild.config.ts  rspress.config.ts  tailwind.config.ts  tasks.md  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: pull_request.yml
.output/: index.js  modern.config.json  nestedRoutes.json  package.json  routes-manifest.json
.serena/: project.yml
api/lambda/: hello.ts
docs/: ai-readiness.md  events.mdx  image-conversion.md  index.mdx  landers.md  partners.mdx  press.mdx  pricing.mdx  privacy.mdx
image-converter/: Cargo.toml  README.md  UPDATE_PLAN.md
image-converter/src/: cli.rs  format.rs  lib.rs  main.rs  options.rs  utils.rs
image-converter/src/converter/: jpeg.rs  mod.rs  png.rs  webp.rs
old/: .browserslistrc  .gitignore  README.md  image.d.ts  modern.config.ts  pnpm-lock.yaml  sitemap.xml  tsconfig.json
public/: _headers  llms-full.txt  llms.txt  openapi.json  robots.txt
scripts/: batch-convert.js  cleanup-converted-images.sh  create-lander.js  generate-rspress-content.mjs  landers.js
src/: Document.tsx  date.ts  env.d.ts  index.css  index.html  index.tsx  mdx-components.tsx  mdx.d.ts  routeTree.gen.ts  router-shim.tsx  router.tsx  testimonials.ts
theme/: index.tsx
(+435 files in other folders)
