[package]
name = "imgc"
version = "0.0.1"
edition = "2021"
rust-version = "1.70.0"
authors = ["Duy NG <hi@tduyng.com>"]
description = "A CLI for converting images to the WebP format written in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/imgc"
homepage = "https://github.com/tduyng/imgc-rs"
repository = "https://github.com/tduyng/imgc-rs"
keywords = ["CLI", "image", "conversion", "webp"]
readme = "README.md"
categories = [
    "command-line-utilities",
    "multimedia::images",
    "multimedia::encoding",
]
include = [
    "Cargo.toml",
    "/src/*.rs",
    "/src/**/*.rs",
]
default-run = "imgc"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
image = { version = "0.25", features = ["avif-native"] }
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.10"
webp = "0.3"

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
opt-level = 3
panic = "abort"
debug = false
lto = true
strip = true

[profile.dev.package."*"]
opt-level = 2
